@@ -12,7 +12,7 @@ identify(x, \dots)
 
 \method{identify}{default}(x, y = NULL, labels = seq_along(x), pos = FALSE,
          n = length(x), plot = TRUE, atpen = FALSE, offset = 0.5,
-         tolerance = 0.25, \dots)
+         tolerance = 0.25, order = FALSE, \dots)
 }
 \arguments{
   \item{x, y}{coordinates of points in a scatter plot.  Alternatively, any
@@ -37,6 +37,9 @@ identify(x, \dots)
     used if \code{atpen = TRUE}.}
   \item{tolerance}{the maximal distance (in inches) for the pointer to be
     \sQuote{close enough} to a point.}
+  \item{order}{if \code{order} is \code{TRUE}, a component is added to the
+    return value which indicates the order in which points were
+    identified: see Value.}
   \item{\dots}{further arguments passed to \code{\link{par}} such as
     \code{cex}, \code{col} and \code{font}.}
 }
@@ -103,14 +106,19 @@ identify(x, \dots)
   will give unpredictable results.
 }
 \value{
-  If \code{pos} is \code{FALSE}, an integer vector containing the
-  indices of the identified points, in the order they were identified.
+  If both \code{pos} and \code{order} are \code{FALSE},
+  an integer vector containing the
+  indices of the identified points.
 
-  If \code{pos} is \code{TRUE}, a list containing a component
-  \code{ind}, indicating which points were identified and a component
+  If either of \code{pos} ord \code{order} is \code{TRUE},
+  a list containing a component
+  \code{ind}, indicating which points were identified and (if
+  \code{pos} is \code{TRUE}) a component
   \code{pos}, indicating where the labels were placed relative to the
   identified points (1=below, 2=left, 3=above, 4=right and 0=no offset,
-  used if \code{atpen = TRUE}).
+  used if \code{atpen = TRUE}) and (if \code{order} is \code{TRUE})
+  a component \code{order}, indicating the order in which points
+  were identified.
 }
 \section{Technicalities}{
   The algorithm used for placing labels is the same as used by
