@@ -3458,7 +3458,7 @@ static void drawLabel(double xi, double yi, int pos, double offset, const char *
 
 SEXP C_identify(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
-    SEXP ans, x, y, l, ind, pos, Offset, draw, saveans;
+    SEXP ans, x, y, l, ind, pos, order, Offset, draw, saveans;
     double xi, yi, xp, yp, d, dmin, offset, tol;
     int atpen, i, imin, k, n, nl, npts, plot, posi, warn;
     pGEDevDesc dd = GEcurrentDevice();
@@ -3560,9 +3560,12 @@ SEXP C_identify(SEXP call, SEXP op, SEXP args, SEXP rho)
         offset = GConvertXUnits(asReal(Offset), CHARS, INCHES, dd);
         PROTECT(ind = allocVector(LGLSXP, n));
         PROTECT(pos = allocVector(INTSXP, n));
+        PROTECT(order = allocVector(INTSXP, n));
         for (i = 0; i < n; i++)
+        {
             LOGICAL(ind)[i] = 0;
-
+            INTEGER(order)[i] = 0;
+        }
         k = 0;
         GMode(2, dd);
         PROTECT(x = duplicate(x));
@@ -3618,7 +3621,7 @@ SEXP C_identify(SEXP call, SEXP op, SEXP args, SEXP rho)
             {
                 k++;
                 LOGICAL(ind)[imin] = 1;
-
+                INTEGER(order)[imin] = k;
                 if (atpen)
                 {
                     xi = xp;
@@ -3659,9 +3662,10 @@ SEXP C_identify(SEXP call, SEXP op, SEXP args, SEXP rho)
             }
         }
         GMode(0, dd);
-        PROTECT(ans = allocList(2));
+        PROTECT(ans = allocList(3));
         SETCAR(ans, ind);
         SETCADR(ans, pos);
+        SETCADDR(ans, order);
         if (GRecording(call, dd))
         {
             /* If we are recording, save enough information to be able to
@@ -3679,7 +3683,7 @@ SEXP C_identify(SEXP call, SEXP op, SEXP args, SEXP rho)
             GErecordGraphicOperation(op, saveans, dd);
             UNPROTECT(1);
         }
-        UNPROTECT(5);
+        UNPROTECT(6);
 
         return ans;
     }
